2004-08-16  Reiner Steib  <Reiner.Steib@gmx.de>

	* time-date.el: Removed.  Merged into ../calendar/time-date.el.

2004-08-02  Reiner Steib  <Reiner.Steib@gmx.de>

	* blink.pbm, blink.xpm, braindamaged.xpm, cry.xpm, dead.xpm,
	evil.xpm, forced.xpm, frown.xpm, grin.xpm, indifferent.xpm,
	reverse-smile.xpm, sad.pbm, sad.xpm, smile.xpm, time-date.el,
	wry.xpm: Added new files from the v5_10 branch of Gnus.

2004-07-22  Andreas Schwab  <schwab@suse.de>

	Import Gnus 5.10 from the v5_10 branch of the Gnus repository.

2004-06-29  Kim F. Storm  <storm@cua.dk>

	* nntp.el (nntp-authinfo-file): Add :group 'nntp.

	* nnimap.el (nnimap-authinfo-file, nnimap-prune-cache):
	Add :group 'nnimap.

2004-05-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-view.el (mm-insert-inline): Make it work in read-only buffer.

	* gnus-win.el (gnus-all-windows-visible-p): Don't consider
	non-visible windows.

2004-05-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* rfc2047.el (rfc2047-encode-message-header): Don't encode non-address
	headers as address headers (which breaks if subject has a single ").

2004-05-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el (nnimap-demule): Avoid string-as-multibyte.

2004-04-21  Richard M. Stallman  <rms@gnu.org>

	* mailcap.el (mailcap-mime-data): Mark as risky.

2004-03-27  Juanma Barranquero  <lektu@terra.es>

	* gnus-srvr.el (gnus-server-prepare): Remove spurious call to `cdr'.

2004-03-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el: Use inhibit-read-only instead of buffer-read-only.
	(gnus-narrow-to-page): Don't assume point-min == 1.
	(gnus-article-edit-mode): Derive from message-mode.
	(gnus-button-alist): Add buttons to (info "(emacs)Keymaps").

	* gnus-score.el (gnus-score-find-bnews): Simplify and don't assume
	point-min == 1.

	* imap.el (imap-parse-address-list, imap-parse-body-ext):
	Disable incorrect use of `assert'.

2004-03-05  Stefan Monnier  <monnier@iro.umontreal.ca>
